[workspace]
resolver = "2"

members = [
	"bridges/bin/runtime-common",
	"bridges/modules/grandpa",
	"bridges/modules/messages",
	"bridges/modules/parachains",
	"bridges/modules/relayers",
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/proposer",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"client/relay-chain-minimal-node",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/aura",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachain",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/asset-hub-polkadot",
	"parachains/runtimes/assets/asset-hub-kusama",
	"parachains/runtimes/assets/asset-hub-westend",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/glutton/glutton-kusama",
	"parachains/runtimes/testing/penpal",
	"parachains/integration-tests/emulated/common",
	"parachains/integration-tests/emulated/assets/asset-hub-kusama",
	"parachains/integration-tests/emulated/assets/asset-hub-polkadot",
	"parachains/integration-tests/emulated/assets/asset-hub-westend",
	"parachains/integration-tests/emulated/collectives/collectives-polkadot",
	"parachains/integration-tests/emulated/bridges/bridge-hub-rococo",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
	"xcm/xcm-emulator",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/substrate"]
node-template = { path = "/Users/sebastian/work/repos/substrate/bin/node-template/node" }
frame-benchmarking = { path = "/Users/sebastian/work/repos/substrate/frame/benchmarking" }
frame-support = { path = "/Users/sebastian/work/repos/substrate/frame/support" }
frame-support-procedural = { path = "/Users/sebastian/work/repos/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/Users/sebastian/work/repos/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/Users/sebastian/work/repos/substrate/frame/support/procedural/tools/derive" }
sp-api = { path = "/Users/sebastian/work/repos/substrate/primitives/api" }
sp-api-proc-macro = { path = "/Users/sebastian/work/repos/substrate/primitives/api/proc-macro" }
sp-core = { path = "/Users/sebastian/work/repos/substrate/primitives/core" }
sp-core-hashing = { path = "/Users/sebastian/work/repos/substrate/primitives/core/hashing" }
sp-debug-derive = { path = "/Users/sebastian/work/repos/substrate/primitives/debug-derive" }
sp-externalities = { path = "/Users/sebastian/work/repos/substrate/primitives/externalities" }
sp-std = { path = "/Users/sebastian/work/repos/substrate/primitives/std" }
sp-storage = { path = "/Users/sebastian/work/repos/substrate/primitives/storage" }
sp-runtime-interface = { path = "/Users/sebastian/work/repos/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/Users/sebastian/work/repos/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/Users/sebastian/work/repos/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/Users/sebastian/work/repos/substrate/primitives/wasm-interface" }
sp-io = { path = "/Users/sebastian/work/repos/substrate/primitives/io" }
sp-keystore = { path = "/Users/sebastian/work/repos/substrate/primitives/keystore" }
sp-state-machine = { path = "/Users/sebastian/work/repos/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/Users/sebastian/work/repos/substrate/primitives/panic-handler" }
sp-trie = { path = "/Users/sebastian/work/repos/substrate/primitives/trie" }
sp-runtime = { path = "/Users/sebastian/work/repos/substrate/primitives/runtime" }
sp-application-crypto = { path = "/Users/sebastian/work/repos/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/Users/sebastian/work/repos/substrate/primitives/arithmetic" }
sp-weights = { path = "/Users/sebastian/work/repos/substrate/primitives/weights" }
substrate-test-runtime-client = { path = "/Users/sebastian/work/repos/substrate/test-utils/runtime/client" }
sc-block-builder = { path = "/Users/sebastian/work/repos/substrate/client/block-builder" }
sc-client-api = { path = "/Users/sebastian/work/repos/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/Users/sebastian/work/repos/substrate/utils/prometheus" }
sc-executor = { path = "/Users/sebastian/work/repos/substrate/client/executor" }
sc-executor-common = { path = "/Users/sebastian/work/repos/substrate/client/executor/common" }
sc-allocator = { path = "/Users/sebastian/work/repos/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/Users/sebastian/work/repos/substrate/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/Users/sebastian/work/repos/substrate/client/executor/wasmtime" }
sc-runtime-test = { path = "/Users/sebastian/work/repos/substrate/client/executor/runtime-test" }
substrate-wasm-builder = { path = "/Users/sebastian/work/repos/substrate/utils/wasm-builder" }
sp-version = { path = "/Users/sebastian/work/repos/substrate/primitives/version" }
sp-core-hashing-proc-macro = { path = "/Users/sebastian/work/repos/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/Users/sebastian/work/repos/substrate/primitives/version/proc-macro" }
sc-tracing = { path = "/Users/sebastian/work/repos/substrate/client/tracing" }
sc-tracing-proc-macro = { path = "/Users/sebastian/work/repos/substrate/client/tracing/proc-macro" }
sp-blockchain = { path = "/Users/sebastian/work/repos/substrate/primitives/blockchain" }
sp-consensus = { path = "/Users/sebastian/work/repos/substrate/primitives/consensus/common" }
sp-inherents = { path = "/Users/sebastian/work/repos/substrate/primitives/inherents" }
sp-test-primitives = { path = "/Users/sebastian/work/repos/substrate/primitives/test-primitives" }
sp-database = { path = "/Users/sebastian/work/repos/substrate/primitives/database" }
sp-rpc = { path = "/Users/sebastian/work/repos/substrate/primitives/rpc" }
substrate-test-runtime = { path = "/Users/sebastian/work/repos/substrate/test-utils/runtime" }
frame-executive = { path = "/Users/sebastian/work/repos/substrate/frame/executive" }
frame-system = { path = "/Users/sebastian/work/repos/substrate/frame/system" }
frame-try-runtime = { path = "/Users/sebastian/work/repos/substrate/frame/try-runtime" }
pallet-balances = { path = "/Users/sebastian/work/repos/substrate/frame/balances" }
pallet-transaction-payment = { path = "/Users/sebastian/work/repos/substrate/frame/transaction-payment" }
frame-system-rpc-runtime-api = { path = "/Users/sebastian/work/repos/substrate/frame/system/rpc/runtime-api" }
pallet-babe = { path = "/Users/sebastian/work/repos/substrate/frame/babe" }
pallet-authorship = { path = "/Users/sebastian/work/repos/substrate/frame/authorship" }
pallet-session = { path = "/Users/sebastian/work/repos/substrate/frame/session" }
pallet-timestamp = { path = "/Users/sebastian/work/repos/substrate/frame/timestamp" }
sp-timestamp = { path = "/Users/sebastian/work/repos/substrate/primitives/timestamp" }
sp-session = { path = "/Users/sebastian/work/repos/substrate/primitives/session" }
sp-staking = { path = "/Users/sebastian/work/repos/substrate/primitives/staking" }
sp-consensus-babe = { path = "/Users/sebastian/work/repos/substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "/Users/sebastian/work/repos/substrate/primitives/consensus/slots" }
frame-election-provider-support = { path = "/Users/sebastian/work/repos/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/Users/sebastian/work/repos/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/Users/sebastian/work/repos/substrate/primitives/npos-elections" }
substrate-test-utils = { path = "/Users/sebastian/work/repos/substrate/test-utils" }
substrate-test-utils-derive = { path = "/Users/sebastian/work/repos/substrate/test-utils/derive" }
sc-service = { path = "/Users/sebastian/work/repos/substrate/client/service" }
sc-chain-spec = { path = "/Users/sebastian/work/repos/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/Users/sebastian/work/repos/substrate/client/chain-spec/derive" }
sc-network = { path = "/Users/sebastian/work/repos/substrate/client/network" }
sc-network-common = { path = "/Users/sebastian/work/repos/substrate/client/network/common" }
sc-consensus = { path = "/Users/sebastian/work/repos/substrate/client/consensus/common" }
sc-utils = { path = "/Users/sebastian/work/repos/substrate/client/utils" }
sp-consensus-grandpa = { path = "/Users/sebastian/work/repos/substrate/primitives/consensus/grandpa" }
sc-network-light = { path = "/Users/sebastian/work/repos/substrate/client/network/light" }
sc-network-sync = { path = "/Users/sebastian/work/repos/substrate/client/network/sync" }
fork-tree = { path = "/Users/sebastian/work/repos/substrate/utils/fork-tree" }
sc-telemetry = { path = "/Users/sebastian/work/repos/substrate/client/telemetry" }
sc-client-db = { path = "/Users/sebastian/work/repos/substrate/client/db" }
sc-state-db = { path = "/Users/sebastian/work/repos/substrate/client/state-db" }
kitchensink-runtime = { path = "/Users/sebastian/work/repos/substrate/bin/node/runtime" }
frame-benchmarking-pallet-pov = { path = "/Users/sebastian/work/repos/substrate/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/Users/sebastian/work/repos/substrate/frame/system/benchmarking" }
node-primitives = { path = "/Users/sebastian/work/repos/substrate/bin/node/primitives" }
pallet-alliance = { path = "/Users/sebastian/work/repos/substrate/frame/alliance" }
pallet-collective = { path = "/Users/sebastian/work/repos/substrate/frame/collective" }
pallet-identity = { path = "/Users/sebastian/work/repos/substrate/frame/identity" }
pallet-asset-conversion = { path = "/Users/sebastian/work/repos/substrate/frame/asset-conversion" }
pallet-assets = { path = "/Users/sebastian/work/repos/substrate/frame/assets" }
pallet-asset-conversion-tx-payment = { path = "/Users/sebastian/work/repos/substrate/frame/transaction-payment/asset-conversion-tx-payment" }
pallet-asset-rate = { path = "/Users/sebastian/work/repos/substrate/frame/asset-rate" }
pallet-asset-tx-payment = { path = "/Users/sebastian/work/repos/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-authority-discovery = { path = "/Users/sebastian/work/repos/substrate/frame/authority-discovery" }
sp-authority-discovery = { path = "/Users/sebastian/work/repos/substrate/primitives/authority-discovery" }
pallet-bags-list = { path = "/Users/sebastian/work/repos/substrate/frame/bags-list" }
pallet-bounties = { path = "/Users/sebastian/work/repos/substrate/frame/bounties" }
pallet-treasury = { path = "/Users/sebastian/work/repos/substrate/frame/treasury" }
pallet-utility = { path = "/Users/sebastian/work/repos/substrate/frame/utility" }
pallet-root-testing = { path = "/Users/sebastian/work/repos/substrate/frame/root-testing" }
pallet-child-bounties = { path = "/Users/sebastian/work/repos/substrate/frame/child-bounties" }
pallet-contracts = { path = "/Users/sebastian/work/repos/substrate/frame/contracts" }
pallet-contracts-primitives = { path = "/Users/sebastian/work/repos/substrate/frame/contracts/primitives" }
pallet-contracts-proc-macro = { path = "/Users/sebastian/work/repos/substrate/frame/contracts/proc-macro" }
pallet-insecure-randomness-collective-flip = { path = "/Users/sebastian/work/repos/substrate/frame/insecure-randomness-collective-flip" }
pallet-proxy = { path = "/Users/sebastian/work/repos/substrate/frame/proxy" }
pallet-conviction-voting = { path = "/Users/sebastian/work/repos/substrate/frame/conviction-voting" }
pallet-scheduler = { path = "/Users/sebastian/work/repos/substrate/frame/scheduler" }
pallet-preimage = { path = "/Users/sebastian/work/repos/substrate/frame/preimage" }
pallet-core-fellowship = { path = "/Users/sebastian/work/repos/substrate/frame/core-fellowship" }
pallet-democracy = { path = "/Users/sebastian/work/repos/substrate/frame/democracy" }
pallet-election-provider-multi-phase = { path = "/Users/sebastian/work/repos/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/Users/sebastian/work/repos/substrate/frame/election-provider-support/benchmarking" }
pallet-elections-phragmen = { path = "/Users/sebastian/work/repos/substrate/frame/elections-phragmen" }
pallet-fast-unstake = { path = "/Users/sebastian/work/repos/substrate/frame/fast-unstake" }
pallet-staking = { path = "/Users/sebastian/work/repos/substrate/frame/staking" }
pallet-staking-reward-curve = { path = "/Users/sebastian/work/repos/substrate/frame/staking/reward-curve" }
pallet-glutton = { path = "/Users/sebastian/work/repos/substrate/frame/glutton" }
pallet-grandpa = { path = "/Users/sebastian/work/repos/substrate/frame/grandpa" }
pallet-offences = { path = "/Users/sebastian/work/repos/substrate/frame/offences" }
sp-keyring = { path = "/Users/sebastian/work/repos/substrate/primitives/keyring" }
pallet-im-online = { path = "/Users/sebastian/work/repos/substrate/frame/im-online" }
pallet-indices = { path = "/Users/sebastian/work/repos/substrate/frame/indices" }
pallet-lottery = { path = "/Users/sebastian/work/repos/substrate/frame/lottery" }
frame-support-test = { path = "/Users/sebastian/work/repos/substrate/frame/support/test" }
frame-support-test-pallet = { path = "/Users/sebastian/work/repos/substrate/frame/support/test/pallet" }
pallet-membership = { path = "/Users/sebastian/work/repos/substrate/frame/membership" }
pallet-message-queue = { path = "/Users/sebastian/work/repos/substrate/frame/message-queue" }
pallet-mmr = { path = "/Users/sebastian/work/repos/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/Users/sebastian/work/repos/substrate/primitives/merkle-mountain-range" }
pallet-multisig = { path = "/Users/sebastian/work/repos/substrate/frame/multisig" }
pallet-nft-fractionalization = { path = "/Users/sebastian/work/repos/substrate/frame/nft-fractionalization" }
pallet-nfts = { path = "/Users/sebastian/work/repos/substrate/frame/nfts" }
pallet-nfts-runtime-api = { path = "/Users/sebastian/work/repos/substrate/frame/nfts/runtime-api" }
pallet-nis = { path = "/Users/sebastian/work/repos/substrate/frame/nis" }
pallet-nomination-pools = { path = "/Users/sebastian/work/repos/substrate/frame/nomination-pools" }
pallet-nomination-pools-benchmarking = { path = "/Users/sebastian/work/repos/substrate/frame/nomination-pools/benchmarking" }
pallet-nomination-pools-runtime-api = { path = "/Users/sebastian/work/repos/substrate/frame/nomination-pools/runtime-api" }
pallet-offences-benchmarking = { path = "/Users/sebastian/work/repos/substrate/frame/offences/benchmarking" }
pallet-ranked-collective = { path = "/Users/sebastian/work/repos/substrate/frame/ranked-collective" }
pallet-recovery = { path = "/Users/sebastian/work/repos/substrate/frame/recovery" }
pallet-referenda = { path = "/Users/sebastian/work/repos/substrate/frame/referenda" }
pallet-remark = { path = "/Users/sebastian/work/repos/substrate/frame/remark" }
pallet-salary = { path = "/Users/sebastian/work/repos/substrate/frame/salary" }
pallet-session-benchmarking = { path = "/Users/sebastian/work/repos/substrate/frame/session/benchmarking" }
pallet-society = { path = "/Users/sebastian/work/repos/substrate/frame/society" }
pallet-staking-runtime-api = { path = "/Users/sebastian/work/repos/substrate/frame/staking/runtime-api" }
pallet-state-trie-migration = { path = "/Users/sebastian/work/repos/substrate/frame/state-trie-migration" }
frame-remote-externalities = { path = "/Users/sebastian/work/repos/substrate/utils/frame/remote-externalities" }
substrate-rpc-client = { path = "/Users/sebastian/work/repos/substrate/utils/frame/rpc/client" }
sc-rpc-api = { path = "/Users/sebastian/work/repos/substrate/client/rpc-api" }
sc-transaction-pool-api = { path = "/Users/sebastian/work/repos/substrate/client/transaction-pool/api" }
substrate-state-trie-migration-rpc = { path = "/Users/sebastian/work/repos/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-statement = { path = "/Users/sebastian/work/repos/substrate/frame/statement" }
sp-statement-store = { path = "/Users/sebastian/work/repos/substrate/primitives/statement-store" }
pallet-sudo = { path = "/Users/sebastian/work/repos/substrate/frame/sudo" }
pallet-tips = { path = "/Users/sebastian/work/repos/substrate/frame/tips" }
pallet-transaction-payment-rpc-runtime-api = { path = "/Users/sebastian/work/repos/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-storage = { path = "/Users/sebastian/work/repos/substrate/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/Users/sebastian/work/repos/substrate/primitives/transaction-storage-proof" }
pallet-uniques = { path = "/Users/sebastian/work/repos/substrate/frame/uniques" }
pallet-vesting = { path = "/Users/sebastian/work/repos/substrate/frame/vesting" }
pallet-whitelist = { path = "/Users/sebastian/work/repos/substrate/frame/whitelist" }
sp-block-builder = { path = "/Users/sebastian/work/repos/substrate/primitives/block-builder" }
sp-offchain = { path = "/Users/sebastian/work/repos/substrate/primitives/offchain" }
sp-transaction-pool = { path = "/Users/sebastian/work/repos/substrate/primitives/transaction-pool" }
sc-informant = { path = "/Users/sebastian/work/repos/substrate/client/informant" }
sc-keystore = { path = "/Users/sebastian/work/repos/substrate/client/keystore" }
sc-network-bitswap = { path = "/Users/sebastian/work/repos/substrate/client/network/bitswap" }
sc-network-transactions = { path = "/Users/sebastian/work/repos/substrate/client/network/transactions" }
sc-rpc = { path = "/Users/sebastian/work/repos/substrate/client/rpc" }
sc-transaction-pool = { path = "/Users/sebastian/work/repos/substrate/client/transaction-pool" }
substrate-test-runtime-transaction-pool = { path = "/Users/sebastian/work/repos/substrate/test-utils/runtime/transaction-pool" }
sc-rpc-server = { path = "/Users/sebastian/work/repos/substrate/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/Users/sebastian/work/repos/substrate/client/rpc-spec-v2" }
sc-sysinfo = { path = "/Users/sebastian/work/repos/substrate/client/sysinfo" }
sp-consensus-aura = { path = "/Users/sebastian/work/repos/substrate/primitives/consensus/aura" }
sp-genesis-builder = { path = "/Users/sebastian/work/repos/substrate/primitives/genesis-builder" }
substrate-test-client = { path = "/Users/sebastian/work/repos/substrate/test-utils/client" }
sc-offchain = { path = "/Users/sebastian/work/repos/substrate/client/offchain" }
sp-runtime-interface-test-wasm = { path = "/Users/sebastian/work/repos/substrate/primitives/runtime-interface/test-wasm" }
sp-metadata-ir = { path = "/Users/sebastian/work/repos/substrate/primitives/metadata-ir" }
frame-benchmarking-cli = { path = "/Users/sebastian/work/repos/substrate/utils/frame/benchmarking-cli" }
sc-cli = { path = "/Users/sebastian/work/repos/substrate/client/cli" }
node-template-runtime = { path = "/Users/sebastian/work/repos/substrate/bin/node-template/runtime" }
pallet-aura = { path = "/Users/sebastian/work/repos/substrate/frame/aura" }
pallet-template = { path = "/Users/sebastian/work/repos/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc = { path = "/Users/sebastian/work/repos/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = "/Users/sebastian/work/repos/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/Users/sebastian/work/repos/substrate/client/proposer-metrics" }
sc-consensus-aura = { path = "/Users/sebastian/work/repos/substrate/client/consensus/aura" }
sc-consensus-slots = { path = "/Users/sebastian/work/repos/substrate/client/consensus/slots" }
sc-network-test = { path = "/Users/sebastian/work/repos/substrate/client/network/test" }
sc-consensus-grandpa = { path = "/Users/sebastian/work/repos/substrate/client/consensus/grandpa" }
sc-network-gossip = { path = "/Users/sebastian/work/repos/substrate/client/network-gossip" }
substrate-frame-rpc-system = { path = "/Users/sebastian/work/repos/substrate/utils/frame/rpc/system" }
try-runtime-cli = { path = "/Users/sebastian/work/repos/substrate/utils/frame/try-runtime/cli" }
substrate-cli-test-utils = { path = "/Users/sebastian/work/repos/substrate/test-utils/cli" }
substrate-build-script-utils = { path = "/Users/sebastian/work/repos/substrate/utils/build-script-utils" }
node-bench = { path = "/Users/sebastian/work/repos/substrate/bin/node/bench" }
node-testing = { path = "/Users/sebastian/work/repos/substrate/bin/node/testing" }
node-executor = { path = "/Users/sebastian/work/repos/substrate/bin/node/executor" }
node-cli = { path = "/Users/sebastian/work/repos/substrate/bin/node/cli" }
node-inspect = { path = "/Users/sebastian/work/repos/substrate/bin/node/inspect" }
node-rpc = { path = "/Users/sebastian/work/repos/substrate/bin/node/rpc" }
mmr-rpc = { path = "/Users/sebastian/work/repos/substrate/client/merkle-mountain-range/rpc" }
sc-consensus-babe = { path = "/Users/sebastian/work/repos/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/Users/sebastian/work/repos/substrate/client/consensus/epochs" }
sc-consensus-babe-rpc = { path = "/Users/sebastian/work/repos/substrate/client/consensus/babe/rpc" }
sc-consensus-grandpa-rpc = { path = "/Users/sebastian/work/repos/substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/Users/sebastian/work/repos/substrate/client/sync-state-rpc" }
sc-authority-discovery = { path = "/Users/sebastian/work/repos/substrate/client/authority-discovery" }
sc-network-statement = { path = "/Users/sebastian/work/repos/substrate/client/network/statement" }
sc-statement-store = { path = "/Users/sebastian/work/repos/substrate/client/statement-store" }
sc-storage-monitor = { path = "/Users/sebastian/work/repos/substrate/client/storage-monitor" }
sc-service-test = { path = "/Users/sebastian/work/repos/substrate/client/service/test" }
substrate-frame-cli = { path = "/Users/sebastian/work/repos/substrate/utils/frame/frame-utilities-cli" }
chain-spec-builder = { path = "/Users/sebastian/work/repos/substrate/bin/utils/chain-spec-builder" }
subkey = { path = "/Users/sebastian/work/repos/substrate/bin/utils/subkey" }
sc-consensus-beefy = { path = "/Users/sebastian/work/repos/substrate/client/consensus/beefy" }
sp-consensus-beefy = { path = "/Users/sebastian/work/repos/substrate/primitives/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/Users/sebastian/work/repos/substrate/client/consensus/beefy/rpc" }
sc-consensus-manual-seal = { path = "/Users/sebastian/work/repos/substrate/client/consensus/manual-seal" }
sc-consensus-pow = { path = "/Users/sebastian/work/repos/substrate/client/consensus/pow" }
sp-consensus-pow = { path = "/Users/sebastian/work/repos/substrate/primitives/consensus/pow" }
mmr-gadget = { path = "/Users/sebastian/work/repos/substrate/client/merkle-mountain-range" }
pallet-atomic-swap = { path = "/Users/sebastian/work/repos/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer = { path = "/Users/sebastian/work/repos/substrate/frame/bags-list/fuzzer" }
pallet-bags-list-remote-tests = { path = "/Users/sebastian/work/repos/substrate/frame/bags-list/remote-tests" }
pallet-beefy = { path = "/Users/sebastian/work/repos/substrate/frame/beefy" }
pallet-beefy-mmr = { path = "/Users/sebastian/work/repos/substrate/frame/beefy-mmr" }
binary-merkle-tree = { path = "/Users/sebastian/work/repos/substrate/utils/binary-merkle-tree" }
pallet-election-provider-e2e-test = { path = "/Users/sebastian/work/repos/substrate/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/Users/sebastian/work/repos/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-examples = { path = "/Users/sebastian/work/repos/substrate/frame/examples" }
pallet-default-config-example = { path = "/Users/sebastian/work/repos/substrate/frame/examples/default-config" }
pallet-dev-mode = { path = "/Users/sebastian/work/repos/substrate/frame/examples/dev-mode" }
pallet-example-basic = { path = "/Users/sebastian/work/repos/substrate/frame/examples/basic" }
pallet-example-kitchensink = { path = "/Users/sebastian/work/repos/substrate/frame/examples/kitchensink" }
pallet-example-offchain-worker = { path = "/Users/sebastian/work/repos/substrate/frame/examples/offchain-worker" }
pallet-example-split = { path = "/Users/sebastian/work/repos/substrate/frame/examples/split" }
pallet-nicks = { path = "/Users/sebastian/work/repos/substrate/frame/nicks" }
pallet-node-authorization = { path = "/Users/sebastian/work/repos/substrate/frame/node-authorization" }
pallet-nomination-pools-fuzzer = { path = "/Users/sebastian/work/repos/substrate/frame/nomination-pools/fuzzer" }
pallet-nomination-pools-test-staking = { path = "/Users/sebastian/work/repos/substrate/frame/nomination-pools/test-staking" }
pallet-paged-list = { path = "/Users/sebastian/work/repos/substrate/frame/paged-list" }
pallet-paged-list-fuzzer = { path = "/Users/sebastian/work/repos/substrate/frame/paged-list/fuzzer" }
pallet-scored-pool = { path = "/Users/sebastian/work/repos/substrate/frame/scored-pool" }
pallet-staking-reward-fn = { path = "/Users/sebastian/work/repos/substrate/frame/staking/reward-fn" }
pallet-root-offences = { path = "/Users/sebastian/work/repos/substrate/frame/root-offences" }
frame-support-test-compile-pass = { path = "/Users/sebastian/work/repos/substrate/frame/support/test/compile_pass" }
sp-api-test = { path = "/Users/sebastian/work/repos/substrate/primitives/api/test" }
sp-application-crypto-test = { path = "/Users/sebastian/work/repos/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/Users/sebastian/work/repos/substrate/primitives/arithmetic/fuzzer" }
sp-crypto-ec-utils = { path = "/Users/sebastian/work/repos/substrate/primitives/crypto/ec-utils" }
sp-npos-elections-fuzzer = { path = "/Users/sebastian/work/repos/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/Users/sebastian/work/repos/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/Users/sebastian/work/repos/substrate/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/Users/sebastian/work/repos/substrate/scripts/ci/node-template-release" }
substrate-test-utils-test-crate = { path = "/Users/sebastian/work/repos/substrate/test-utils/test-crate" }
substrate-frame-rpc-support = { path = "/Users/sebastian/work/repos/substrate/utils/frame/rpc/support" }
generate-bags = { path = "/Users/sebastian/work/repos/substrate/utils/frame/generate-bags" }
node-runtime-generate-bags = { path = "/Users/sebastian/work/repos/substrate/utils/frame/generate-bags/node-runtime" }
substrate = { path = "/Users/sebastian/work/repos/substrate" }

